<resources>
    <string name="app_name">CheckDot</string>
    <string name="team_name">다라닷닷</string>

    <string name="learning1_t">1.점자란? </string>
    <string name="learning1_c">지면 위에 도드라진 점을 손가락으로 만져서 읽는 맹인용 문자</string>
    <string name="learning2_t">2.점자의 발명</string>
    <string name="learning2_c">프랑스의 육군 장교 바르비에(C. Barbier)가 전쟁터에서 밤에 군사용 작전 명령문을 읽을 수 있는
야간문자(ecriture nocturne)를 고안했다. 12점(세로로 6점, 가로로 2점)으로 이루어진 야간문자가 일반 사람들이
읽기 어려워 군사용으로는 실패했지만, 맹인들에게 도움이 되는 문자가 될 수 있을 것이라고 생각하고
        파리맹학교에서 야간문자를 시범하였다.</string>
    <string name="learning2_c_2">이때 파리맹학교에 재학 중이던 루이 브라유(Louis Braille)는 야간문자가 세로로 6점 배열이 손가락 끝으로
지각하기에 너무 높다고 생각했고 세로 3점, 가로 2점인 6점 점자를 창안하였다. 그는 1824년에 알파벳, 숫자, 간단한
문장부호 등을 제자(製字)하였고, 1829년에 자신의 문자에 대한 논문을 발표하였으며, 1837년에 점자를 더욱
        수정·보완하였다.</string>
    <string name="learning2_c_3">당시 파리맹학교 정안인 교사들은 점자가 일반 묵자의 모양과 달라 문자로서 가치가 없다며 반대해 학교에서
사용하지 못하게 했다. 그러나 학생들이 몰래 점자를 사용해 공부했고, 이들은 점자를 사용하지 않는 학생들보다
성적이 좋았다. 이로써 점자의 유용성이 입증되었고, 파리맹학교에서는 점자를 공식으로 사용할 수 있도록
허가하였다. 이것은 루이 브라유가 점자를 발명한 지 30년 후, 죽은 지 2년 후인 1854년의 일이었다. 파리맹학교에서
점자를 맹인의 문자로 공인했다는 것은 점자가 세계 맹인의 문자로 발돋움하는 중요한 계기가 되었다.</string>
    <string name="learning3_t">3.점자의 구성</string>
    <string name="learning3_c">6점(세로 3점, 가로 2점)으로 구성되어 있고 조합하여 64개의 점형을 만든다.
        왼쪽 위에서 아래로 1, 2, 3점, 오른쪽 위에서 아래로 4, 5, 6점의 고유 번호를 붙여 사용한다.</string>
    <string name="learning3_c_2">63개의 점형을 초성(첫소리)자음 13자, 종성(받침)자음 14자, 모음 21자, 약자 27자, 약어 7개, 숫자, 문장부호 이고
64개의 점형 중 하나는 점을 하나도 찍지 않은 빈칸으로, 단어와 단어 사이를 띄우는 데 사용된다.
</string>
    <string name="learning4_t">4.한글 점자의 두 가지 원리</string>
    <string name="learning4_c">첫째, 기본 점의 원리\n
초성 ‘ㄱ, ㄴ, ㄷ’은 4점을, ‘ㄹ, ㅁ, ㅂ’은 5점을, ‘ㅅ, ㅈ, ㅊ’은 6점을, ‘ㅋ, ㅌ’은 1-2점을, ‘ㅍ, ㅎ’은 4-5점을 기본
점으로 하여 제자했다.\n\n둘째, 대칭의 원리\n‘ㅏ ㅑ, ㅓ ㅕ, ㅗ ㅛ, ㅜ ㅠ, ㅡ ㅣ’ 열 자를 두 자씩 모양을 반전시켜 제자했다.</string>
    <string name="learning5_t">5. 한글 점자(훈맹정음)의 특성</string>
    <string name="learning5_c">- 초성 자음과 종성 자음이 다르게 제자되었다.\n- 점자에서는 초성 ‘ㅇ’을 사용하지 않는다.\n- 초성 ‘ㄲ, ㄸ, ㅃ, ㅆ, ㅉ’을 적을 때에는 앞의 ‘ㄱ, ㄷ, ㅂ, ㅅ, ㅈ’ 대신 된소리표를 적는다.\n- 부피를 줄이고, 읽기와 쓰기 속도를 증가시키기 위하여 27개의 약자와 7개의 약어를 사용한다.\n- 약자 ‘영’은 그 앞에 ‘ㅅ, ㅆ, ㅈ, ㅉ, ㅊ’이 올 때에는 ‘성, 썽, 정, 쩡, 청’이 된다.- 모음 겹글자 ‘얘’는 ‘야＋이’가 아니라 ‘야＋애’로, ‘위’는 ‘우＋이’가 아니라 ‘우＋애’로 쓰고, 모음 겹글자 ‘왜’는
‘오＋애’가 아니라 ‘와＋애’로, ‘웨’는 ‘우＋에’가 아니라 ‘워＋애’로 쓴다.\n- 점자는 모아쓰지 않고 풀어쓴다. 예를 들면 ‘국’을 ‘ㄱ, ㅜ, ㄱ’으로 적는다.</string>
    <string name="learning6_t">6.초성과 종성의 구분</string>
    <string name="learning6_c">
점자는 옆으로 풀어쓰는 특성 때문에 자음의 초성과 종성이 서로 다르므로 초성과 종성을 좌우 또는 상하로 대칭
이동시켜 모양을 그대로 살리면서 제자했다. 초성 ‘ㄱ, ㄹ, ㅂ, ㅅ, ㅈ, ㅊ’을 각각 좌측으로 이동시켜 종성 ‘ㄱ, ㄹ, ㅂ, ㅅ, ㅈ, ㅊ’으로 제자하였고, 좌우 이동이
어려운 자음은 아래로 1점씩 이동시켰다. 초성 ‘ㄴ, ㄷ, ㅁ, ㅋ, ㅌ, ㅍ, ㅎ’을 1점씩 아래로 이동시킨 것이 종성 ‘ㄴ, ㄷ,
ㅁ, ㅋ, ㅌ, ㅍ, ㅎ’이다.</string>


    <string name="about1">다라닷닷</string>
    <string name="about2">체크닷(CheckDot) : 정안인을 위한 점자 해석기</string>
    <string name="about3">맹인들은 점자를 통해 필요한 정보를 얻고 판단한다. 그렇기 때문에 점자의 표기에 오류가 있으면 그들에게 치명적일
수 있다. 그러나 일상 생활에서 엘리베이터 버튼, 점자 교재 등에서 중요한 정보가 잘못 표기된 경우를 종종 발견할 수 있다. 때문에 초기에 점자 표기의 오류를 찾고 수정하는 것이 중요하다. 하지만 정안인들은 점자에 대한 이해가 부족하여 오류를 발견하기 쉽지 않다. 때문에 정안인을 위한 점자 해석기, 체크닷(CheckDot)을 통해 문제를 해결하고자 한다.</string>
    <string name="about4">-촬영한 이미지 분석을 통한 점자 인식\n-인식한 점자 한글로 번역\n\n+점자 사전, 점자 검색 등 추가기능</string>
    <string name="about5">개발 환경</string>

    <string name="notice">아래와 같은 경우 번역결과가 이상할 수 있어요\n  - 배경이 화려한 경우\n  - 초점이 안 맞는 경우\n  - 점자 크기가 작은 경우</string>

</resources>
