<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    android:orientation="horizontal"
    tools:context=".AboutUs.AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/toolbar_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/undoBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/icon_selector"
            android:src="@drawable/ic_undo"
            android:tint="#2c2c2c"
            app:layout_constraintBottom_toBottomOf="@+id/textView14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView14" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:lineHeight="65dp"
            android:text="점자 공부하기"
            android:textColor="#2c2c2c"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/photoview_theme"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/learning1_t"
                android:textColor="#424242"
                android:textSize="15dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/learning1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/learning1_c"
                android:textSize="13dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="3dp"
                android:text="@string/learning2_t"
                android:textColor="#424242"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/learning2_c"
                android:textSize="13dp"
                app:lineHeight="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="0.4"
                    android:text="@string/learning2_c_2"
                    android:textSize="13dp"
                    app:lineHeight="20dp" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.6"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/braillie" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/learning2_c_3"
                android:textSize="13dp"
                app:lineHeight="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="3dp"
                android:text="@string/learning3_t"
                android:textSize="15dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/pic_braillie" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:paddingRight="10dp"
                android:text="@string/learning3_c"
                android:textSize="13dp"
                app:lineHeight="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/learning3_c_2"
                android:textSize="13dp"
                app:lineHeight="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="3dp"
                android:text="@string/learning4_t"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/learning4_c"
                android:textSize="13dp"
                app:lineHeight="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="3dp"
                android:text="@string/learning5_t"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/learning5_c"
                android:textSize="13dp"
                app:lineHeight="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="3dp"
                android:text="@string/learning6_t"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/learning6_c"
                android:textSize="13dp"
                app:lineHeight="20dp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>